--- a/.editorconfig
+++ b/.editorconfig
@@ -4,9 +4,29 @@ end_of_line = lf
 insert_final_newline = true
 trim_trailing_whitespace = true
 
+[*.{c,h}{,pp}]
+indent_size = 4
+indent_style = tab
+
+[*.cs]
+indent_size = 4
+indent_style = tab
+
+[*.js]
+indent_size = 4
+indent_style = tab
+
 [*.md]
 indent_size = 2
 indent_style = space
+
+[*.py]
+indent_size = 2
+indent_style = tab
+
+[*.rb]
+indent_size = 2
+indent_style = tab
 
 [*.rs]
 indent_size = 4
@@ -14,6 +34,10 @@ indent_style = tab
 
 [*.toml]
 indent_size = 8
+indent_style = tab
+
+[*.ts]
+indent_size = 4
 indent_style = tab
 
 [*.yml]
